Manage dark mode for lestoitsdeparis + misc dark mode fixes

--- a/src/css/dark_theme/game.less
+++ b/src/css/dark_theme/game.less
@@ -8,6 +8,7 @@
   --ext-overlay-color: transparent;
   --ext-overall-color: transparent;
   --game-palette-bga-link: var(--blue-50);
+  --game-palette-bga-blue: var(--blue-50);
 }
 
 :root,
